--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,19 +1,34 @@
 {
+  "help": {
+    "text": "Попробуйте написать /start :)",
+    "randomInput": "Выберите необходимое действие в меню!"
+  },
   "scenes": {
     "start": {
       "newTalon": "Введите номер талона:",
-      "talonNotExist": "Такого талона нет! Попробуйте еще раз."
+      "talonNotExist": "Такого талона нет! Попробуйте еще раз.",
+      "notExistPayload": "Такого талона не существует!",
+      "welcome": "Добро пожаловать!"
     },
     "reminds": {
+      "question": "Выберите действие:",
+      "chooseOption": ", выберите услугу",
+      "short": "Кратко",
+      "details": "Подробнее",
+      "yourReminds": "Ваши напоминания",
+      "noReminds": "Напоминания отсутствуют"
     },
     "talon": {
+      "question": "Выберите действие:"
+
     },
     "main": {
       "question": "Что узнать?"
     },
     "settings": {
       "question": "Что изменить?",
-      "languageSelect": "Выберите язык:"
+      "languageSelect": "Выберите язык:",
+      "langSelect": "Выбран русский язык"
     }
   },
   "keyboards": {
@@ -30,6 +45,11 @@
     "talon": {
       "begin": "Начать",
       "end": "Завершить"
+    },
+    "newTalon": {
+      "back": "Вернуться",
+      "new": "Отслеживать новый талон",
+      "exist": "Продолжить отслеживание существующего"
     },
     "reminds": {
       "all": "Просмотреть активные",
