--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,6 +11,9 @@
       "welcome": "Добро пожаловать!"
     },
     "reminds": {
+      "yourReminder": "У вас активно:",
+      "selectAnother": "Для изменения варианта напоминания выберите один из списка.",
+      "selected": "Вы выбрали:",
       "question": "Выберите действие:",
       "chooseOption": ", выберите услугу",
       "short": "Кратко",
@@ -20,7 +23,6 @@
     },
     "talon": {
       "question": "Выберите действие:"
-
     },
     "main": {
       "question": "Что узнать?"
