--- a/src/locales/ukr.json
+++ b/src/locales/ukr.json
@@ -11,6 +11,9 @@
       "welcome": "Вітаємо!"
     },
     "reminds": {
+      "yourReminder": "У вас активно:",
+      "selectAnother": "Для зміни варіанту нагадування виберіть один зі списку.",
+      "selected": "Ви выбрали:",
       "question": "Оберіть дію:",
       "chooseOption": ", оберіть послугу",
       "short": "Коротко",
