выбор языка при старте

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,7 @@
     "settings": {
       "question": "What to change?",
       "languageSelect": "Select language:",
-      "langSelect": "Selected english language"
+      "langSelect": "English language is selected"
     }
   },
   "keyboards": {
